j ai modifiée jenkins file