@@ -12,13 +12,13 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
+import java.util.List;
 import java.util.Objects;
 
 @Component
 @RequiredArgsConstructor
 @Order(1)
 public class AuthenticationFilter implements GlobalFilter, Ordered {
-
 
     private final JwtService jwtService;
     private final RouteValidator validator;
@@ -34,22 +34,26 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
         if (validator.getIsSecured().test(exchange.getRequest())) {
             if (!exchange.getRequest().getHeaders().containsKey(HttpHeaders.AUTHORIZATION)) {
                 exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-                return exchange.getResponse().setComplete();            }
+                return exchange.getResponse().setComplete();
+            }
 
-            String authHeader = Objects.requireNonNull(exchange.getRequest().getHeaders().get(HttpHeaders.AUTHORIZATION)).getFirst();
-            if (authHeader.startsWith("Bearer ")) {
-                String token = authHeader.substring(7);
-                try {
-                    jwtService.validateToken(token);
-                } catch (Exception e) {
-                    exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
+            List<String> authHeaders = exchange.getRequest().getHeaders().get(HttpHeaders.AUTHORIZATION);
+            if (authHeaders != null && !authHeaders.isEmpty()) {
+                String authHeader = authHeaders.get(0); // Get the first element safely
+                if (authHeader.startsWith("Bearer ")) {
+                    String token = authHeader.substring(7);
+                    try {
+                        jwtService.validateToken(token);
+                    } catch (Exception e) {
+                        exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
+                        return exchange.getResponse().setComplete();
+                    }
+                    exchange.getAttributes().put("jwtToken", token);
+                    return applyAuthorizationFilter(exchange, chain);
+                } else {
+                    exchange.getResponse().setStatusCode(HttpStatus.BAD_REQUEST);
                     return exchange.getResponse().setComplete();
                 }
-                exchange.getAttributes().put("jwtToken", token);
-                return applyAuthorizationFilter(exchange, chain);
-            } else {
-                exchange.getResponse().setStatusCode(HttpStatus.BAD_REQUEST);
-                return exchange.getResponse().setComplete();
             }
         }
         return chain.filter(exchange);
